--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,8 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/dashboard.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/header.js"></script>
         <!-- endbuild -->
 </body>
 </html>
