--- a/app/index.html
+++ b/app/index.html
@@ -59,12 +59,15 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/appservice.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/header.js"></script>
+        <script src="scripts/controllers/publication.js"></script>
+        <script src="scripts/controllers/addpublication.js"></script>
         <!-- endbuild -->
 </body>
 </html>
