--- a/app/index.html
+++ b/app/index.html
@@ -21,12 +21,12 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-view=""></div>
 
+    <div ng-view=""></div>
 
     <div class="footer" style="margin-top: 1em;">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> From Oakland University CSE/CIT 337</p>
+        <p class="text-center"><span class="glyphicon glyphicon-heart"></span> From Oakland University CSE/CIT 337</p>
       </div>
     </div>
 
@@ -60,14 +60,17 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/services/appservice.js"></script>
+        <script src="scripts/http-request.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/header.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/header.js"></script>
+
         <script src="scripts/controllers/publication.js"></script>
         <script src="scripts/controllers/addpublication.js"></script>
+        <script src="scripts/controllers/search.js"></script>
         <!-- endbuild -->
 </body>
 </html>
